--- a/style.css
+++ b/style.css
@@ -33,18 +33,16 @@ body {
 
 #searchBar {
   width: 95%;
-  height: 75%;
+  height: 55%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.5rem;
-  border-radius: 50px;
-  padding: 20px;
-  background-color: #C5C5C5;
+  padding: 5px;
   border: none;
+  border-bottom: 2px solid #848484;
   cursor: text;
-
   &:focus {
     outline: none;
   }
@@ -55,6 +53,37 @@ body {
 .displayArea{
   width: 100%;
   height: 90%;
-  border: 1px solid #000;
   padding: 15px 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+img{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+.user{
+  padding: 5px;
+  width: 95%;
+  height: 60px;
+  border-radius: 15px;
+  background-color: #DFDFDF;
+  display: flex;
+  gap: 5px;
+}
+.data{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.name{
+  font-size: 1.2rem;
+  font-weight: 800;
+}
+.email{
+  font-size: 0.8rem;
+  color: #636363;
+  font-weight: 500;
 }
