--- a/style.css
+++ b/style.css
@@ -7,26 +7,22 @@
 html,
 body {
   position: relative;
-  height: 100vh;
-  width: 100vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #D5D5D5;
 }
 
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 98%;
-  width: 95%;
+  position: relative;
+  margin: 10px;
+  min-height: 98vh;
+  width: 95vw;
   background-color: #FFFFFF;
   box-shadow: 0 0 10px 1px #C8C8C8;
   border-radius: 10px;
 }
 
 .searchArea {
-  height: 10%;
+  height: 10vh;
   width: 100%;
   position: relative;
 }
@@ -52,7 +48,7 @@ body {
 }
 .displayArea{
   width: 100%;
-  height: 90%;
+  min-height: 90%;
   padding: 15px 5px;
   display: flex;
   flex-direction: column;
